kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-web
  labels:
    app: portfolio-web
spec:
  type: ClusterIP
  selector:
    app: portfolio-web
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
